# Ex-Grapha

./: .gitignore  CLAUDE.md  Cargo.toml  index.html  package-lock.json  package.json  rustfmt.toml  tsconfig.json
.claude/docs/: core-feature-spec.md  designer-asset-brief.md  milestone.md
.github/workflows/: rust.yaml
crates/core/: Cargo.toml
crates/core/src/: config.rs  edge.rs  error.rs  frontmatter.rs  lib.rs  model.rs  node.rs  node_parser.rs  project.rs  relation.rs  staleness.rs  util.rs  validation.rs  watcher.rs
crates/core/tests/: config.rs  edge_crud.rs  frontmatter.rs  model.rs  node_crud.rs  node_parser.rs  project.rs  relation.rs  staleness.rs  validation.rs  watcher.rs
crates/core/tests/common/: mod.rs
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  watcher.rs
