[package]
name = "ex-grapha-app"
version = "0.1.0"
edition = "2021"

[lib]
name = "ex_grapha_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ex-grapha-core = { path = "../crates/core" }
notify = "7"
notify-debouncer-mini = "0.5"
